fixed inputs margins to avoid overlap

--- a/src/style.css
+++ b/src/style.css
@@ -25,11 +25,11 @@ fieldset {
 }
 
 #slider-prices {
-  margin: 15px 5px 35px;
+  margin: 15px 5px 55px;
 }
 
 #slider-powerup {
-  margin: 15px 5px 45px;
+  margin: 15px 5px 55px;
 }
 
 #input-exponent {
